Split code between library and browser

--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>Main.qml</file>
         <file>LogLine.qml</file>
     </qresource>
 </RCC>
