Initial browser integration for remot journals
Implement basic setup for reading journald data from an external source
like a systemd-journald-gateway server. The full integration only was
tested with a limited setup of a few hundred log lines and misses
important features for big data streams (handling of file rotations,
persistent storage of received data).

--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -6,5 +6,6 @@
     <qresource prefix="/">
         <file>Main.qml</file>
         <file>LogLine.qml</file>
+        <file>RemoteJournalConfigDialog.qml</file>
     </qresource>
 </RCC>
