Split top menu into own file

--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -7,5 +7,6 @@
         <file>Main.qml</file>
         <file>LogLine.qml</file>
         <file>RemoteJournalConfigDialog.qml</file>
+        <file>TopMenuBar.qml</file>
     </qresource>
 </RCC>
