--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -1,12 +1,9 @@
-<!--
-    SPDX-License-Identifier: LGPL-2.1-or-later OR MIT
-    SPDX-FileCopyrightText: 2021 Andreas Cord-Landwehr <cordlandwehr@kde.org>
--->
 <RCC>
     <qresource prefix="/">
         <file>Main.qml</file>
         <file>LogLine.qml</file>
         <file>RemoteJournalConfigDialog.qml</file>
         <file>TopMenuBar.qml</file>
+        <file>LogView.qml</file>
     </qresource>
 </RCC>
