--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -5,5 +5,6 @@
         <file>RemoteJournalConfigDialog.qml</file>
         <file>TopMenuBar.qml</file>
         <file>LogView.qml</file>
+        <file>FilterCriteriaView.qml</file>
     </qresource>
 </RCC>
