Add global menu if available
![image](/uploads/be5e70db3157d829fa9177f7cf35baeb/image.png)

--- a/browser/qml.qrc
+++ b/browser/qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>Main.qml</file>
         <file>LogLine.qml</file>
+        <file>GlobalMenu.qml</file>
         <file>RemoteJournalConfigDialog.qml</file>
         <file>TopMenuBar.qml</file>
         <file>LogView.qml</file>
